# rag-reliability-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_eval_data.py  rebuild_indexes.py  run_eval.py  seed_data.py
src/rag_engine/: __init__.py  exceptions.py  main.py
src/rag_engine/api/: app.py  auth.py  dependencies.py  middleware.py  rate_limiter.py  routes_health.py  routes_ingest.py  routes_query.py
src/rag_engine/chunking/: overlap.py  quality.py  structure_chunker.py
src/rag_engine/config/: constants.py  settings.py
src/rag_engine/embeddings/: cache.py  cached_embedder.py  openai_embedder.py
src/rag_engine/evaluation/: metrics.py  runner.py
src/rag_engine/generation/: answer_generator.py  gemini_provider.py  prompt_templates.py
src/rag_engine/ingestion/: parser_html.py  parser_markdown.py  parser_pdf.py  parser_registry.py  parser_text.py  pipeline.py
src/rag_engine/keyword_search/: bm25_index.py  tokenizer.py
src/rag_engine/models/: domain.py  schemas.py
src/rag_engine/observability/: logger.py  metrics.py  tracing.py
src/rag_engine/pipeline/: ingest_pipeline.py  query_pipeline.py
src/rag_engine/protocols/: chunker.py  doc_store.py  (+5 more)
tests/: conftest.py
tests/fixtures/: eval_dataset.json  rag_overview.txt  sample.html  sample.md  sample.txt
tests/integration/: test_sqlite_stores.py
tests/unit/: test_auth.py  test_cached_embedder.py  test_chunking.py  test_quality.py  test_rrf.py  test_schemas.py  test_scoring.py  test_tokenizer.py
(+17 files in other folders)
